2008-02-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- fixed AC_CONFIG_SRCDIR.

	* netif.C:
	* netif.cpp:
	* file.C:
	* file.cpp:
	* main.C:
	* main.cpp:
	* logplayer.C:
	* logplayer.cpp:
	* nowindow.C
	* nowindow.cpp:
	* controler.C:
	* controler.cpp:
	- renamed a file extention.

	* types.h
	* rcgparser.cpp:
	* rcgparser.hpp:
	- added new types.

2007-06-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	Updated a point version. Official Release 11.1.0.

2007-06-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	Fixed a X11 library configuration problem on some platforms.

2007-05-31  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	Fixed a build problem on some platforms.
	Updated a minor version number. Official Release 11.1.0.

2007-05-24  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* BUGS:
	* Makefile.am:
	* NEWS:
	* configure.ac:
	* rcgparserexample/ChangeLog:
	* rcgparserexample/INSTALL:
	* rcgparserexample/Makefile.am:
	* rcgparserexample/aclocal.m4:
	* rcgparserexample/configure.ac:
	* rcgparserexample/src/Makefile.am:
	Fiexd a defect of the wrong library linking in the
	rcgparserexample.
	Updated a point version number. Release Candidate 11.0.3.

2007-05-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/controler.C:
	Fixed a replay speed in the rewind and forward mode.

2007-05-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	* src/logplayer.C:
	Fixed a bug in the command line parsing. A missing return
	statement is added to parseCmdLine()..
	Fixed a flicker while the stop mode.
	Updated a point version number.

2007-05-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/logplayer.C:
	* src/logplayer.h:
	Fixed a build problem on some platform.
	Fixed a defect in the wait time initialization.

2007-05-15  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/controler.C:
	* src/logplayer.C:
	* src/logplayer.h:
	* src/netif.C: